# snekkja-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: index.html  snekkja.css  snekkja.js
