[package]
name = "snekkja-rs"
version = "1.0.0"
authors = ["Dan <dx2718@gmail.com"]
edition = "2021"
documentation = "https://github.com/d2718/snekkja-rs"
readme = "README.md"
homepage = "https://github.com/d2718/snekkja-rs"
repository = "https://github.com/d2718/snekkja-rs"
license = "Unlicense"

[[bin]]
name = "snekkja"
path = "src/main.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
toml = "^0.5"

